syntax = "proto3";
package zams;

message Empty {
}

message VersionReply {
  string version = 1;
}

message Boolean {
  bool value = 1;
}

message Amount {
  uint64 amount = 1;
}

message RawTx {
  string hex = 1;
  bool signed = 2;
}

message TxId {
  string hash = 1;
}

message Fee {
  uint64 amount = 1;
  bool perkb = 2;
}

message BlockHeight {
  uint32 height = 1;
}

message PubKey {
  string key = 1;
}

message TxInfo {
  string hash = 1;
  uint32 height = 2;
  repeated TxIn inputs = 3;
  repeated TxOut outputs = 4;
}

message TxIn {
  string txHash = 1;
  uint64 amount = 2;
  uint32 outputIndex = 3;
  string address = 4;
}

message TxOut {
  uint64 amount = 1;
  string address = 2;
  bytes memo = 3;
}

message ValidateAddressRequest {
  string address = 1;
  uint64 amount = 2;
  bool tracked = 3;
}

message GetAddressBalanceRequest {
  string address = 1;
  uint32 minConfirmations = 2;
}

message PrepareUnsignedTxRequest {
  string addressFrom = 1;
  string addressTo = 2;
  uint64 amount = 3;
  uint64 fee = 4;
}

message EstimateFeeRequest {
  bool shielded = 1;
}

service BlockExplorer {
  rpc GetVersion(Empty) returns (VersionReply);

  rpc ValidateAddress(ValidateAddressRequest) returns (Boolean);
  rpc GetAddressBalance(GetAddressBalanceRequest) returns (Amount);
  rpc PrepareUnsignedTx(PrepareUnsignedTxRequest)  returns (RawTx);
  rpc BroadcastSignedTx(RawTx) returns (TxId);
  rpc EstimateFee(EstimateFeeRequest) returns (Fee);
  rpc GetCurrentHeight(Empty) returns (BlockHeight);
  rpc GetTxInfo(TxId) returns (TxInfo);
  rpc Rescan(BlockHeight) returns (BlockHeight);
  rpc ImportPublicKey(PubKey) returns (Empty);
}
